--- a/src/components/Card/style.scss
+++ b/src/components/Card/style.scss
@@ -170,6 +170,10 @@
 			line-height: 1.33;
 			color: $chakra-colors-brand-secondaryDark;
 			margin: 0px;
+			justify-content: flex-start;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: nowrap;
 	}
 }
 
@@ -209,4 +213,149 @@
     padding-left: 5px;
     color: $chakra-colors-brand-secondaryDark;
 	}
+}
+
+.container--category {
+	width: 100%;
+	padding-top: 0.5rem;
+
+	> .category--name {
+		font-family: Poppins;
+		font-weight: 500;
+		font-size: $chakra-fontSizes-sm;
+		line-height: 1.33;
+		color: #2E58FF;
+		line-height: 1.2;
+		margin: 0;
+	}
+}
+
+.container--reward {
+	display: grid;
+	width: 100%;
+	padding-top: 2rem;
+	padding-bottom: 0.5rem;
+	border-bottom: 1px solid #00000061;
+	> .reward--name {
+		font-family: $chakra-font-general;
+		font-weight: 500;
+		font-size: $chakra-fontSizes-sm;
+		line-height: 1.2;
+		color: $chakra-colors-brand-secondaryDark;
+		margin: 0px;
+	}
+
+}
+
+.container--location {
+	display: grid;
+	grid-template-columns: repeat(12, 2fr);
+	width: 100%;
+	padding-top: 0.8rem;
+}
+
+.location-right {
+	grid-column: span 6/span 6;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-align-items: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	-webkit-box-pack: start;
+	-ms-flex-pack: start;
+	-webkit-justify-content: flex-start;
+	justify-content: flex-start;
+	-webkit-flex-direction: row;
+	-ms-flex-direction: row;
+	flex-direction: row;
+}
+
+.ulr-location {
+	transition-property: $chakra-transition-property-common;
+	transition-duration: $chakra-transition-duration-fast;
+	transition-timing-function: $chakra-transition-easing-ease-out;
+	cursor: pointer;
+	-webkit-text-decoration: none;
+	text-decoration: none;
+	outline: 2px solid transparent;
+	outline-offset: 2px;
+	color: inherit;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-align-items: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	-webkit-box-pack: start;
+	-ms-flex-pack: start;
+	-webkit-justify-content: flex-start;
+	justify-content: flex-start;
+	-webkit-flex-direction: row;
+	-ms-flex-direction: row;
+	flex-direction: row;
+	font-family: Poppins;
+	font-weight: 500;
+	font-size: $chakra-fontSizes-sm;
+	line-height: 1.33;
+	color: #2E58FF;
+	cursor: pointer;
+	-webkit-text-decoration: underline;
+	text-decoration: underline;
+	margin: 0px;
+	margin-top: 0.2rem;
+}
+
+.location-left {
+	grid-column: span 6/span 6;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-align-items: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	-webkit-box-pack: end;
+	-ms-flex-pack: end;
+	-webkit-justify-content: flex-end;
+	justify-content: flex-end;
+	width: 100%;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-align-items: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	-webkit-box-pack: end;
+	-ms-flex-pack: end;
+	-webkit-justify-content: flex-end;
+	justify-content: flex-end;
+	-webkit-flex-direction: row;
+	-ms-flex-direction: row;
+	flex-direction: row;
+}
+
+button.conoce-mas {
+	background: none;
+	border: none;
+	font-family: $chakra-font-general;
+	font-weight: 500;
+	font-size: $chakra-fontSizes-sm;
+	line-height: 1.33;
+	margin: 0px;
+	padding-left: 0.3rem;
+	color: #2E58FF;
+	cursor: pointer;
+	-webkit-text-decoration: underline;
+	text-decoration: underline;
+	-webkit-flex-direction: row;
+	-ms-flex-direction: row;
+	flex-direction: row;
 }
